--- a/index.html
+++ b/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rękodzieło ze skóry</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title id="page_title">Rękodzieło ze skóry</title>
+    <link rel="stylesheet" href="style.css"/>
+    <script src="local/lang.js"></script>
 </head>
 <body>
+
 <header>
-    <h1>Ręcznie robione wyroby ze skóry</h1>
-    <p>Portfel, pasek, etui – wszystko wykonane z pasją</p>
+    <img src="images/logo.png" alt="Skórat Logo" class="logo">
+    <h1 id="header_title">Ręcznie robione wyroby ze skóry</h1>
+    <p id="header_desc">Tworzone z pasją… i małymi łapkami</p>
+    <nav>
+        <a href="index.html" id="nav_home">Strona główna</a> |
+        <a href="products.html" id="nav_products">Produkty</a> |
+        <a href="about.html" id="nav_about">O mnie</a> |
+        <a href="contact.html" id="nav_contact">Kontakt</a>
+    </nav>
 </header>
 
-<section class="gallery">
-    <h2>Galeria</h2>
-    <div class="grid">
-        <img src="images/item1.jpg" alt="Skórzany portfel" />
-        <img src="images/item2.jpg" alt="Pasek ze skóry" />
-        <img src="images/item3.jpg" alt="Etui na noże" />
-        <!-- Добавь свои изображения -->
-    </div>
-</section>
+<main>
+    <section class="intro">
+        <h2 id="intro_title">Witaj na naszej stronie!</h2>
+        <p id="intro_text">Tworzę wyjątkowe wyroby ze skóry naturalnej, które łączą elegancję, funkcjonalność i pasję… przekazywaną z łapki do łapki.</p>
+    </section>
 
-<section class="about">
-    <h2>O mnie</h2>
-    <p>Cześć! Mam na imię [Twoje Imię] i od kilku lat tworzę unikalne wyroby ze skóry naturalnej. Każdy produkt wykonuję ręcznie z dbałością o każdy szczegół.</p>
-</section>
+    <!--    <section class="gallery-preview">
+            <h2 id="products_title">Nasze produkty</h2>
+            <div class="grid">
+                <div class="product-preview">
+                    <img src="images/wallet.jpg" alt="Portfel skórzany" />
+                    <p id="product_wallet">Portfel skórzany</p>
+                </div>
+                <div class="product-preview">
+                    <img src="images/docHolder.jpg" alt="Pasek ze skóry" />
+                    <p id="product_belt">Pasek ze skóry</p>
+                </div>
+                <div class="product-preview">
+                    <img src="images/docHolderCat.jpg" alt="Etui na dokumenty z kote," />
+                    <p id="product_case">Etui na noże</p>
+                </div>
+            </div>
+        </section>-->
+</main>
 
-<section class="contact">
-    <h2>Kontakt</h2>
-    <p>Instagram: <a href="https://instagram.com/yourhandle" target="_blank">@yourhandle</a></p>
-    <p>Email: twoj@email.com</p>
-</section>
+<div id="footer-container"></div>
 
-<footer>
-    <p>&copy; 2025 Rękodzieło skórzane</p>
-</footer>
+<script src="components/common.js"></script>
+
 </body>
 </html>
