--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 <main>
     <section class="contact">
         <h2>Napisz do mnie</h2>
-        <p>Najlepiej złapać nas przez:</p>
+        <p>Najlepiej złapać mnie przez:</p>
         <ul>
             <li>Email: <a href="mailto:kontakt@skorat.pl">kontakt@skorat.pl</a></li>
             <li>Instagram: <a href="https://instagram.com/skorat.leather" target="_blank">@skorat.leather</a></li>
