--- a/products.html
+++ b/products.html
@@ -19,8 +19,21 @@
     </nav>
 </header>
 
+<template id="product-template">
+    <div class="product">
+        <h2 class="title"></h2>
+        <div class="product-gallery"></div>
+        <p class="size"></p>
+        <p class="description"></p>
+    </div>
+</template>
+
 <section class="products" id="products"></section>
 <script src="components/products.js"></script>
+
+<p class="note">
+    🐾 Uwaga: każdy egzemplarz może nieco się różnić – w końcu każda łapka zostawia inny ślad.
+</p>
 
 <div id="footer-container"></div>
 
