--- a/products.html
+++ b/products.html
@@ -32,7 +32,7 @@
 <script src="components/products.js"></script>
 
 <p class="note">
-    🐾 Uwaga: każdy egzemplarz może nieco się różnić – w końcu każda łapka zostawia inny ślad.
+    🐾 Uwaga: każdy egzemplarz może nieco się różnić – w końcu każda łapka zostawia unikalny ślad.
 </p>
 
 <div id="footer-container"></div>
