--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     <section class="gallery-preview">
         <h3 id="gallery-preview_title">🧵 Rzuć okiem na moje dzieła</h3>
         <p id="gallery-preview_text">Nie musisz przeczesywać strychu – najnowsze i najulubieńsze wyroby znajdziesz <a href="products.html">tutaj</a>. Elegancko, stylowo i z nutką pazura.</p>
-        <img src="images/docHolderCat/docHolderCat2.jpg"  class="preview">
-        <img src="images/watchBracelet/watchBraceletR3.jpg"  class="preview">
+        <div class="product-gallery">
+            <img src="images/docHolderCat/docHolderCat2.jpg"  class="preview">
+            <img src="images/watchBracelet/watchBraceletR3.jpg"  class="preview">
+        </div>
     </section>
 
     <section class="call-to-action">
