--- a/about.html
+++ b/about.html
@@ -5,30 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>O mnie - Skórat</title>
     <link rel="stylesheet" href="style.css"/>
+    <script src="local/lang.js"></script>
 </head>
 <body>
 
 <header>
     <img src="images/logo.png" alt="Skórat Logo" class="logo">
-    <h1>O mnie</h1>
-    <p>Poznaj historię marki Skórat</p>
+    <h1 id="header_about">O mnie</h1>
+    <p id="header_desc_about">Poznaj historię marki Skórat</p>
     <nav>
-        <a href="index.html">Strona główna</a> |
-        <a href="products.html">Produkty</a> |
-        <a href="about.html">O mnie</a> |
-        <a href="contact.html">Kontakt</a>
+        <a href="index.html" id="nav_home">Strona główna</a> |
+        <a href="products.html" id="nav_products">Produkty</a> |
+        <a href="about.html" id="nav_about">O mnie</a> |
+        <a href="contact.html" id="nav_contact">Kontakt</a>
     </nav>
 </header>
 
 <section id="about-text">
-    <h2>Moja Historia</h2>
+    <h2 id="header_story_about">Moja Historia</h2>
     <div class="about-content">
         <img src="images/panSzczurowski.jpg" class="about-image">
         <div class="text">
-            <p><strong>Nazywam się Pan Szczurowski – szczur na wszystkie łapki!</strong></p>
-            <p>Przybiegłem z Białorusi i osiedliłem się w Polsce. Na początku mieszkałem w lasach i bagnach, ale z czasem trafiłem do Warszawy. Tam znalazłem człowieka, w którego mieszkaniu się zadomowiłem.</p>
-            <p>Przez jakiś czas to działało… ale potem zaczął burczeć, że ma dość darmozjada. Nie chciałem być ciężarem, więc postanowiłem się czegoś nauczyć. Tak odkryłem rzemiosło kaletnicze – i już od prawie dwóch lat tworzę własnymi łapkami praktyczne i piękne wyroby ze skóry.</p>
-            <p>Każdy portfel, pasek czy etui to efekt mojej pasji, precyzji i szczurzego charakteru.</p>
+            <p id="header_story_1"><strong>Nazywam się Pan Szczurowski – szczur na wszystkie łapki!</strong></p>
+            <p id="header_story_2">Przybiegłem z Białorusi i osiedliłem się w Polsce. Na początku mieszkałem w lasach i bagnach, ale z czasem trafiłem do Warszawy. Tam znalazłem człowieka, w którego mieszkaniu się zadomowiłem.</p>
+            <p id="header_story_3">Przez jakiś czas to działało… ale potem zaczął burczeć, że ma dość darmozjada. Nie chciałem być ciężarem, więc postanowiłem się czegoś nauczyć. Tak odkryłem rzemiosło kaletnicze – i już od prawie dwóch lat tworzę własnymi łapkami praktyczne i piękne wyroby ze skóry.</p>
+            <p id="header_story_4">Każdy przedmiot to efekt mojej pasji, precyzji i zaradnej natury.</p>
         </div>
     </div>
 </section>
